--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="proceedPayment">
             <p id="paymentTxt">
-                Prooced Payment
+                Proceed Payment
             </p>
         </div>
         <p id="cancelOrder">Cancel order</p>
